--- a/package.json
+++ b/package.json
@@ -31,13 +31,19 @@
     "@meilisearch/instant-meilisearch": "^0.7.1",
     "@paypal/paypal-js": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
+    "framer-motion": "^11.11.8",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.452.0",
     "medusa-react": "^9.0.0",
-    "next": "^14.0.0",
+    "next": "^14.2.15",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
@@ -59,13 +65,13 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.18",
     "@types/react-instantsearch-dom": "^6.12.3",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^8.2.3",
     "eslint": "8.10.0",
     "eslint-config-next": "^13.4.5",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.47",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.3.2"
   }
 }
