--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@meilisearch/instant-meilisearch": "^0.7.1",
     "@paypal/paypal-js": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -41,6 +42,7 @@
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.452.0",
